Add Sitecore management service image
Add SMS and test Sitecore serialization

--- a/.env
+++ b/.env
@@ -16,8 +16,10 @@ ID_HOST=id.sitecore-demo-store.localhost
 SITE_HOST=www.sitecore-demo-store.localhost
 
 SITECORE_DOCKER_REGISTRY=scr.sitecore.com/sxp/
+SITECORE_MODULE_REGISTRY=scr.sitecore.com/sxp/modules/
 SITECORE_TOOLS_REGISTRY=scr.sitecore.com/tools/
 SITECORE_VERSION=10.1.0-ltsc2019
+MANAGEMENT_SERVICES_VERSION=3.0-1809
 TOOLS_VERSION=10.1.0-1809
 
 SITECORE_ADMIN_PASSWORD=b
