--- a/src/Project/Core/code/Sitecore.Demo.Store.Project.Core.csproj
+++ b/src/Project/Core/code/Sitecore.Demo.Store.Project.Core.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sitecore.Demo.Store.Core</RootNamespace>
-    <AssemblyName>Sitecore.Demo.Store.Core</AssemblyName>
+    <RootNamespace>Sitecore.Demo.Store.Project.Core</RootNamespace>
+    <AssemblyName>Sitecore.Demo.Store.Project.Core</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort>44322</IISExpressSSLPort>
@@ -69,7 +69,7 @@
   <ItemGroup>
     <Content Include="App_Config\json.json" />
     <None Include="Directory.Build.props" />
-    <None Include="Sitecore.Demo.Store.Core.wpp.targets" />
+    <None Include="Sitecore.Demo.Store.Project.Core.wpp.targets" />
     <None Include="web.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
